...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Create Account"
            app:titleCentered="true"/>

...
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel" />

            <EditText
                android:id="@+id/email_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:inputType="textWebEmailAddress" />

...
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel" />

            <EditText
                android:id="@+id/name_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstNameInput"
                android:inputType="textPersonName" />

...
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel" />

            <EditText
                android:id="@+id/password_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

...
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro" />

            <EditText
                android:id="@+id/intro_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/introInput"
                android:imeOptions="actionNext|actionDone|flagNoEnterAction"
                android:inputType="textShortMessage"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton" />


        </LinearLayout>
...
