...
    <string name="emailHint">Enter your email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">Enter your password</string>

    <!--Create Page-->
    <string name="createMessage">Create Account</string>
    <string name="registerButton">Create My Account</string>
    <string name="nameLabel">Name</string>
    <string name="firstNameInput">Enter your name</string>
    <string name="intro">Introduce yourself!</string>
    <string name="introInput">Say anything</string>

    <!--Login Page-->
...
    <!--Add Project Page-->
    <string name="projectNameHint">Project Name</string>
    <string name="projectDescHint">Project Description</string>

    <!--Recipient Info-->
    <string name="recipientEmailLabel">Email of the user you want to invite</string>
    <string name="sendInviteButton">Invite</string>
    <string name="recipientEmailHint">Enter their email here</string>

    <!--Invite Sent-->
    <string name="sentMessage">Your invite was sent to userEmail</string>
    <string name="someoneElse">Invite More</string>
    <string name="goBackProject">Back to project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">more</string>
    <string name="content_description_more">See additional page options</string>
    <string name="edit_project_action_title">Edit Project</string>
    <string name="edit_project_action_description">Edit Project</string>
    <string name="invite_to_project_action_title">Invite Users</string>
    <string name="dashboard_add_action_description">Dashboard Add Action</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--Task -->
    <string name="taskNameInput">Task Name</string>
...
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out_button_label">Sign Out</string>
    <string name="saved_email">saved_email</string>
    <string name="saved_password">saved_password</string>
    <string name="save_credentials">save_credentials</string>
    <string name="placeholder_user_list_item_name">First Last</string>

</resources>
